# Surface-Parameterization-Algorithms

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OrbifoldTutteEmbedding.sln  README.md  UpgradeLog.htm  auto-commit.sh
BoundaryFirstFlattening/: BoundaryFirstFlattening.vcxproj  BoundaryFirstFlattening.vcxproj.filters
BoundaryFirstFlattening/src/: BFF.cpp  BFF.h  BFFInitializer.cpp  BFFInitializer.h
Code/: OrbifoldTutteEmbedding.sln
Code/BoundaryFirstFlattening/: BoundaryFirstFlattening.vcxproj  BoundaryFirstFlattening.vcxproj.filters
Code/BoundaryFirstFlattening/src/: BFF.cpp  BFF.h  BFFInitializer.cpp  BFFInitializer.h
Code/Mesh/: Mesh.vcxproj  Mesh.vcxproj.filters
Code/Mesh/src/: MeshDefinition.h
Code/OrbifoldEmbedding/: OrbifoldEmbedding.vcxproj  OrbifoldEmbedding.vcxproj.filters
Code/OrbifoldEmbedding/src/: EuclideanOrbifoldSolver.h  HyperbolicOrbifoldSolver.h  OrbifoldInitializer.h
Code/TestData/: bunny.mark  bunny2.mark  sphere_orbifold1.mark  sphere_orbifold3.mark  sphere_simple.mark  sphere_simple4.mark
Code/TestData/EuclideanOrbifold/: david_orbifold3.mark
Code/TestData/GlobalParameterization/: max.mark  toy.mark
Code/TestData/Polygon/: bunny_disk.mark
Code/Utilities/: Utilities.vcxproj.filters
Code/Utilities/src/: Dijkstra.h  LineCylinder.h  MeshFormConverter.h  MeshMarker.cpp  MeshMarker.h  MeshMerger.cpp  MeshMerger.h  PointSphere.h
Code/Utilities/src/Geometry/: Circle.cpp  HyperbolicGeometry.h
Code/Utilities/src/Topology/: EuclideanCoveringSpace.cpp  HyperbolicCoveringSpace.h  MeshSlicer.cpp  MeshSlicer.h
Code/Viewer/: Viewer.vcxproj.filters
Code/Viewer/src/: GUIViewer.cpp  GUIViewer.h
Code/experiment/EuclideanOrbifold/: david_orbifold2.mark
Code/experiment/GlobalParameterization/: cube.mark  david_orbifold4.mark  max.mark
Code/experiment/HyperbolicOrbifold/: bunny_sphere.mark
Code/experiment/Polygon/: half_sphere.mark
Documents/Final-Presentation/: FinalPre.tex
Documents/Final-Presentation/.texpadtmp/: FinalPre.aux  FinalPre.blg  FinalPre.nav  FinalPre.out  FinalPre.snm  FinalPre.toc  OrbifoldMidtermPresentation.aux  OrbifoldMidtermPresentation.out
Documents/Final-Report/: abstract.tex  bff.tex  introduction.tex  main.tex  orbifold.tex  sample.bib  toolbox.tex  wlscirep.cls
Documents/Final-Report/.texpadtmp/: abstract.aux  introduction.aux  main.aux  main.bbl  main.blg  main.out  toolbox.aux
Documents/Paper-Presentation/.texpadtmp/: OrbifoldMidtermPresentation.blg  OrbifoldMidtermPresentation.nav  OrbifoldMidtermPresentation.toc
Documents/Paper-Review/: main.tex  sample.bib
Documents/Paper-Review/.texpadtmp/: main.aux  main.bbl  main.blg  main.out
Documents/PaperPresentation/: OrbifoldMidtermPresentation.tex
Documents/Project-Proposal/.texpadtmp/: Proposal.aux  Proposal.blg
Documents/ProjectProposal/: Proposal.tex
Mesh/: Mesh.vcxproj  Mesh.vcxproj.filters
Mesh/src/: MeshDefinition.cpp  MeshDefinition.h
Mesh/x64/Debug/: Mesh.idb
Mesh/x64/Debug/Mesh.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
OrbifoldEmbedding/: OrbifoldEmbedding.vcxproj  OrbifoldEmbedding.vcxproj.filters
OrbifoldEmbedding/src/: EuclideanOrbifoldSolver.cpp  EuclideanOrbifoldSolver.h  HyperbolicOrbifoldSolver.cpp  HyperbolicOrbifoldSolver.h  OrbifoldInitializer.cpp  OrbifoldInitializer.h  OrbifoldMeshSlicer.cpp  OrbifoldMeshSlicer.h  SingularitySelectAndCut.h
TestData/: bunny_orbifold2.mark  cube.mark  half_sphere_boundary_cones.mark  half_sphere_inner_cones.mark  max.mark  sphere_hyper1.mark  sphere_orbifold4.mark
Topology/: Topology.vcxproj  Topology.vcxproj.filters
Topology/src/: MeshSlicer.h
Utilities/: Utilities.vcxproj  Utilities.vcxproj.filters
Utilities/src/: Dijkstra.cpp  Dijkstra.h  LineCylinder.cpp  MeshFormConverter.cpp  MeshFormConverter.h  MeshMarker.cpp  MeshMarker.h  MeshMerger.cpp  MeshMerger.h  MeshSlicer.cpp  MeshSlicer.h  StringParser.h
Utilities/src/Geometry/: Circle.cpp  Circle.h  EuclideanGeometry2D.cpp  EuclideanGeometry2D.h  HyperbolicGeometry.cpp  HyperbolicGeometry.h
Utilities/src/Topology/: EuclideanCoveringSpace.cpp  EuclideanCoveringSpace.h  MeshSlicer.cpp  MeshSlicer.h  main.cpp
Utilities/x64/Debug/: Utilities.idb  vc141.idb
Utilities/x64/Debug/Utilities.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Utilities.lastbuildstate
Viewer/: Viewer.vcxproj  Viewer.vcxproj.filters
Viewer/src/: GUIViewer.cpp  GUIViewer.h  viewer.h
Viewer/x64/Debug/Viewer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Viewer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: FindLIBIGL.cmake  FindOpenMesh.cmake
experiment/ConeParameterization/: david1.mark
src/: CMakeLists.txt
src/BoundaryFirstFlattening/: BFF.cpp  BFF.h  BFFInitializer.h
src/OrbifoldEmbedding/: EuclideanOrbifoldSolver.cpp  EuclideanOrbifoldSolver.h  HyperbolicOrbifoldSolver.h  OrbifoldInitializer.h
src/Utilities/: Dijkstra.cpp  EuclideanCoveringSpace.h  EuclideanGeometry2D.cpp  EuclideanGeometry2D.h  HyperbolicCoveringSpace.cpp  HyperbolicCoveringSpace.h  LineCylinder.cpp  MeshFormConverter.cpp  MeshFormConverter.h  MeshMarker.cpp  MeshMarker.h  MeshMerger.h  MeshSlicer.h  PointSphere.cpp  StringParser.cpp
src/Viewer/: GUIViewer.cpp  GUIViewer.h  main.cpp
x64/Debug/: OrbifoldTutteEmbedding.exp  OrbifoldTutteEmbedding.lib  Test.exp  Test.lib
x64/Release/: OrbifoldTutteEmbedding.exp  OrbifoldTutteEmbedding.ipdb  OrbifoldTutteEmbedding.lib
